@startuml
'https://plantuml.com/class-diagram

class Main
class Game
class FileIO
class TextUI
class Player
class BankAccount
class Board
class Field
class Dice
class Parking
class Start
class Visit
class Jail


Main : - static Game game
Main : + static void main()

Game : - File fileIO;
Game : - TextUI textUI;
Game : - ArrayList<Player> players
Game : + void gameSetup()
Game : - void createPlayers(ArrayList<String> data)
Game : + displayPlayers()
Game : + void runGame()
Game : - throwAndMove(Player p)
Game : - landAndAct(Player p, Field f)

FileIO : + ArrayList<String> readGameData()
FileIO : + void writeGameData(ArrayList<Player> players)
FileIO : + String[] readBoardData()

TextUI : + String getUserInput(String msg)
TextUI : + int getUserInput(String msg, ArrayList<String> options)
TextUI : + ArrayList<String> getUserInput(String msg, int iterations)
TextUI : - Scanner scan



Player : + Player(String name, int amount)
Player : + ArrayList<Field> deeds
Player : - String name
Player : - int position
Player : + String getName()
Player : + void setName(String name)
Player : + void buy(int cost)
Player : + int getAmount()
Player : + String toString()
Player : + void updatePosition()

BankAccount : -int balance
BankAccount : +BankAccount(int startAmount)
BankAccount : +void doTransaction(int amount)
BankAccount : +int getBalance()
BankAccount : +String toString()

Field : + Field(ID, label, cost, income)
Field : - String label
Field : - int ID
Field : - int cost
Field : - int income

Field : + String toString()
Field : + String onLand(Player p)
Field : + String processResponse(Player p)
Field : # String onAccept(Player p)
Field : # String onReject(Player p)

Property : - int seriesID
Property : - Player owner
Property : + String onLand(Player p)
Property : - String onAccept(Player p)
Property : - String onReject(Player p)

Plot : + String onLand(Player p)
Plot : - String onAccept(Player p)
Plot : - String onReject(Player pPlayer p)

Business : + String onLand(Player p)
Business : - String onAccept(Player p)
Business : - String onReject(Player p)

Tax : + String onLand(Player p)
Tax : - String onAccept(Player p)
Tax : - String onReject(Player p)

Chance : + Chance(ID, label)
Chance : + String onLand(Player p)
Chance : - String onAccept(Player p)
Chance : - String onReject(Player p)



Field <|-- Tax
Field <|-- Jail
Field <|-- Start
Field <|-- Parking
Field <|-- Visit
Field <|-- Chance
Field <|-- Property
Property <|-- Plot
Property <|-- Business

Dice : + int rollDice()
Dice : - boolean isDouble()

Board : - Field[] fields
Board : + Board(String [] data)
Board : - void createFields(String [] data)
Board : + Field getField(int id)
Game *-- Dice
Main *-- Game : has-a
Game *-- FileIO : has-a
Game *-- TextUI : has-a
Game *-- "2...6" Player
Player *-- BankAccount
Game *-- Board : has-a
Board *-- "40" Field


@enduml